# cpp-utilities

./: CMakeLists.txt  LICENSE  README.md  readme.md
arg.h/: arg.h  arg.h.test.cpp
args/: README.md  args.cppm  args.demo.cpp  args.hpp  args.tests.cpp
assertions.h/: assertions.h
autotag/: README.md  autotag.cpp
bmp/: README.md  bmp.cppm
calc/: calc.cpp
convert/: binary_to_decimal.cpp  binary_to_hex.cpp  binary_to_octal.cpp  convert.cpp  convert.hpp  decimal_to_binary.cpp  decimal_to_hex.cpp  decimal_to_octal.cpp  hex_to_binary.cpp  hex_to_decimal.cpp  hex_to_octal.cpp  octal_to_binary.cpp  octal_to_decimal.cpp  octal_to_hex.cpp
fff/: README.md  fff.cpp
huge.h/: huge.h  huge.h.test.cpp  huge.test.cpp
lr_parser_ex/: ast_node.hpp  lexer.hpp  main.cpp  match_func.hpp  match_pair.hpp  parse_stack.hpp  parser.hpp  production_rule.hpp  token.hpp
pcre/: README.md  pcre.cppm  pcre.hpp
testing/: README.md  testing.cppm  testing.hpp
thread_queue/: README.md  thread_queue.hpp  thread_queue.tests.cpp
